--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,10 @@
     <artifactId>jvm_flags</artifactId>
     <version>1.0-SNAPSHOT</version>
     <properties>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>1.9</maven.compiler.source>
+        <maven.compiler.target>1.9</maven.compiler.target>
+        <auto-service.version>1.0-rc2</auto-service.version>
+        <maven-compiler-plugin.version>3.7.0</maven-compiler-plugin.version>
     </properties>
 
     <dependencies>
@@ -29,7 +31,6 @@
         </dependency>
 
 
-
         <!-- todo DELETE ONE OF UNIT TEST FRAMEWORKS  -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
@@ -44,7 +45,6 @@
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
-
     </dependencies>
 
     <build>
@@ -52,7 +52,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.7.0</version>
+                <version>${maven-compiler-plugin.version}</version>
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
@@ -61,4 +61,48 @@
         </plugins>
     </build>
 
+    <profiles>
+        <!--<profile>-->
+            <!--<id>annot_processing</id>-->
+            <!--<activation>-->
+                <!--<activeByDefault>false</activeByDefault>-->
+            <!--</activation>-->
+            <!--<dependencies>-->
+                <!--<dependency>-->
+                    <!--<groupId>com.google.auto.service</groupId>-->
+                    <!--<artifactId>auto-service</artifactId>-->
+                    <!--<version>${auto-service.version}</version>-->
+                    <!--<scope>provided</scope>-->
+                <!--</dependency>-->
+                <!--&lt;!&ndash;<dependency>&ndash;&gt;-->
+                <!--&lt;!&ndash;<groupId>com.baeldung</groupId>&ndash;&gt;-->
+                <!--&lt;!&ndash;<artifactId>annotation-processing</artifactId>&ndash;&gt;-->
+                <!--&lt;!&ndash;<version>1.0.0-SNAPSHOT</version>&ndash;&gt;-->
+                <!--&lt;!&ndash;&lt;!&ndash;<scope>provided</scope>&ndash;&gt;&ndash;&gt;-->
+                <!--&lt;!&ndash;</dependency>&ndash;&gt;-->
+            <!--</dependencies>-->
+            <!--<build>-->
+                <!--<plugins>-->
+                    <!--<plugin>-->
+                        <!--<groupId>org.apache.maven.plugins</groupId>-->
+                        <!--<artifactId>maven-compiler-plugin</artifactId>-->
+                        <!--&lt;!&ndash;<version>3.5.1</version>&ndash;&gt;-->
+                        <!--<configuration>-->
+                            <!--&lt;!&ndash;<source>1.8</source>&ndash;&gt;-->
+                            <!--&lt;!&ndash;<target>1.8</target>&ndash;&gt;-->
+                            <!--&lt;!&ndash;<encoding>UTF-8</encoding>&ndash;&gt;-->
+                            <!--<generatedSourcesDirectory>${project.build.directory}-->
+                                <!--/generated-sources/-->
+                            <!--</generatedSourcesDirectory>-->
+                            <!--<annotationProcessors>-->
+                                <!--<annotationProcessor>-->
+                                    <!--com.beltser.lab.oop.MyProcessor-->
+                                <!--</annotationProcessor>-->
+                            <!--</annotationProcessors>-->
+                        <!--</configuration>-->
+                    <!--</plugin>-->
+                <!--</plugins>-->
+            <!--</build>-->
+        <!--</profile>-->
+    </profiles>
 </project>
